--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
+        "friendsofphp/php-cs-fixer": "*",
         "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
